[feature-frontend-17-fix] fixed overflow-hidden

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 * {
   box-sizing: border-box;
   font-family: Inter !important;
-  overflow-x: hidden;
 }
+
 .Auth {
   display: flex;
   flex-direction: row;
@@ -122,6 +122,7 @@
 .account-button {
   margin-top: 60px;
 }
+
 .leaflet-popup {
   width: 0;
 }
